--- a/angular-crud-campaigns/src/app/components/campaigns-list/campaigns-list.component.html
+++ b/angular-crud-campaigns/src/app/components/campaigns-list/campaigns-list.component.html
@@ -1,5 +1,5 @@
-<div class="mat-elevation-z8 list">
-  <table mat-table [dataSource]="dataSource">
+<div class="mat-elevation-z8 list" *ngIf="dataSource$ | async as dataSource">
+  <table mat-table [dataSource]=" dataSource">
 
     <!-- ID Column -->
     <ng-container matColumnDef="id">
