--- a/angular-crud-campaigns/src/app/components/add-edit-campaign/add-edit-campaign.component.html
+++ b/angular-crud-campaigns/src/app/components/add-edit-campaign/add-edit-campaign.component.html
@@ -1,7 +1,7 @@
 <div mat-dialog-title>
   <h1>Campaign Form</h1>
 </div>
-<form [formGroup]="campaignForm" (ngSubmit)="checkValues()">
+<form [formGroup]="campaignForm!" (ngSubmit)="onFormSubmit()">
   <div mat-dialog-content class="content">
     <div class="row">
       <mat-form-field appearance="outline">
@@ -16,24 +16,20 @@
         <mat-radio-button value="off">Off</mat-radio-button>
       </mat-radio-group>
     </div>
-    <div class="row">
-      <!-- <mat-form-field appearance="outline">
-        <mat-label>Keywords</mat-label> -->
-        <ng-multiselect-dropdown [placeholder]="'custom placeholder'" [settings]="dropdownSettings" [data]="keywords"
-          formControlName="keyword" (onSelect)="onItemSelect($event)" (onSelectAll)="onSelectAll($event)">
-        </ng-multiselect-dropdown>
-        <!-- <mat-select formControlName="keyword">
-          <mat-option *ngFor="let key of keywords" [value]="key">{{key}}</mat-option>
-        </mat-select> -->
-      <!-- </mat-form-field> -->
+    <div class="row keys">
+      <mat-label><b>Keywords</b></mat-label>
+      <ng-multiselect-dropdown class="multiselect" [placeholder]="'Choose keywords'" [settings]="dropdownSettings"
+        [data]="keywords" formControlName="keyword">
+      </ng-multiselect-dropdown>
     </div>
     <div class="row">
       <mat-form-field appearance="outline">
-        <mat-label>Bid Amount</mat-label>
+        <mat-label>Bid Amount ($)</mat-label>
         <input matInput type="number" formControlName="bidAmount">
+        <mat-error>{{showMinimalErrors()}}</mat-error>
       </mat-form-field>
       <mat-form-field appearance="outline">
-        <mat-label>Campaign Fund</mat-label>
+        <mat-label>Campaign Fund ($)</mat-label>
         <input matInput type="number" formControlName="campaignFund">
       </mat-form-field>
     </div>
@@ -47,7 +43,7 @@
     </div>
     <div class="row">
       <mat-form-field appearance="outline">
-        <mat-label>Radius</mat-label>
+        <mat-label>Radius (km)</mat-label>
         <input matInput type="number" formControlName="radius">
       </mat-form-field>
     </div>
