--- a/angular-crud-campaigns/src/app/components/add-edit-campaign/add-edit-campaign.component.scss
+++ b/angular-crud-campaigns/src/app/components/add-edit-campaign/add-edit-campaign.component.scss
@@ -17,6 +17,12 @@ button {
   gap: 10px;
   align-items: center;
 
+  .multiselect {
+    margin-top: 20px;
+    margin-bottom: 30px;
+    width: 100% !important;
+  }
+
   mat-slider {
     width: 100%;
   }
