--- a/angular-crud-campaigns/src/app/components/campaigns-list/campaigns-list.component.html
+++ b/angular-crud-campaigns/src/app/components/campaigns-list/campaigns-list.component.html
@@ -1,4 +1,5 @@
 <div class="mat-elevation-z8 list" *ngIf="dataSource$ | async as dataSource">
+<!-- *ngIf="dataSource$ | async as dataSource" -->
   <table mat-table [dataSource]=" dataSource">
 
     <!-- ID Column -->
@@ -20,13 +21,13 @@
     <ng-container matColumnDef="options">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Options</th>
       <td mat-cell *matCellDef=" let row">
-        <button mat-icon-button color="primary" ariaLabel="info">
+        <button mat-icon-button color="primary" ariaLabel="info" (click)="openDetailWindow(row)">
           <mat-icon>info</mat-icon>
         </button>
-        <button mat-icon-button color="primary" ariaLabel="edit">
+        <button mat-icon-button color="primary" ariaLabel="edit" (click)="openEditForm(row)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button color="warn" ariaLabel="delete">
+        <button mat-icon-button color="warn" ariaLabel="delete" (click)="deleteCampaign(row.id)">
           <mat-icon>delete</mat-icon>
         </button>
 
