Refactored and styles changed

--- a/angular-crud-campaigns/src/app/app.component.html
+++ b/angular-crud-campaigns/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<app-budget></app-budget>
-<app-campaigns-list></app-campaigns-list>
+<div class="main-body">
+  <app-budget></app-budget>
+  <app-campaigns-list></app-campaigns-list>
+</div>
