--- a/angular-crud-campaigns/src/app/components/campaign-detail/campaign-detail.component.html
+++ b/angular-crud-campaigns/src/app/components/campaign-detail/campaign-detail.component.html
@@ -1,6 +1,6 @@
-<div mat-dialog-title>
+<mat-dialog-title mat-dialog-title>
   <h1>Details</h1>
-</div>
+</mat-dialog-title>
 <mat-dialog-content class="content">
   <mat-list>
     <mat-list-item>Name: <span>{{campaignDetail.name}}</span></mat-list-item>
