--- a/angular-crud-campaigns/src/app/components/add-edit-campaign/add-edit-campaign.component.scss
+++ b/angular-crud-campaigns/src/app/components/add-edit-campaign/add-edit-campaign.component.scss
@@ -2,6 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+
+  @media screen and (max-width: 620px) {
+  }
 }
 
 button {
@@ -17,6 +20,15 @@ button {
   gap: 10px;
   align-items: center;
 
+  @media screen and (max-width: 620px) {
+    flex-direction: column;
+
+    .multiselect {
+      margin-top: 0px !important;
+      width: 100% !important;
+    }
+  }
+
   .multiselect {
     margin-top: 20px;
     margin-bottom: 30px;
@@ -29,6 +41,7 @@ button {
 
   mat-form-field {
     width: 100%;
+    max-width: 1024px !important;
   }
 }
 
