--- a/angular-crud-campaigns/src/app/components/budget/budget.component.scss
+++ b/angular-crud-campaigns/src/app/components/budget/budget.component.scss
@@ -1,7 +1,13 @@
 mat-card {
+  position: relative;
+  top: 0;
+  left: 0;
+  margin-right: auto;
+  margin-left: auto;
   display: flex;
   flex-direction: row;
   width: auto !important;
   justify-content: center;
   font-size: 1.2rem;
+  max-width: 1024px;
 }
