--- a/angular-crud-campaigns/src/styles.scss
+++ b/angular-crud-campaigns/src/styles.scss
@@ -13,5 +13,11 @@
   --header-color: #65a0d6;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
